some plans template changes

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -317,17 +317,14 @@ i.fa.fa-chevron-down{
             </div>
         </div>
 
-        <style>
-            
-        </style>
-        <div class="section-full bg-white content-inner-1">
+        <div class="section-full bg-white content-inner-1 my-5 py-5">
             <div class="container">
                 <div class="overview-box style1">
                     <!-- <div class="overview-media wow fadeInLeft img-move2" data-wow-delay="0.3s">
                         <img src="{% static 'images/illustrator/skeleton.svg' %}" alt="">
                     </div> -->
                     <div class="w-100">
-                        <h2 class="title text-center mb-5">Frequently Asked Questions</h2>
+                        <h2 class="title text-center mb-5 pb-5">Frequently Asked Questions</h2>
                         <div class="accordion mb-2">
                             <div class="row">
                                 {% for f in faq %}
@@ -347,12 +344,13 @@ i.fa.fa-chevron-down{
                                     </div>
                                 </div>
                                 {% endfor %}
-                            </div>  
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
 
         <br><br><br>
 
