--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -831,11 +831,11 @@
                                 <!-- Content -->
 {#                                {% include 'chat/chat-js.html' %}#}
                                 <!-- Mobile: more -->
-                                <div class="col-1 d-xl-none p-0 text-center" title="Open Chatroom" onclick="redirectNotebook()">
-                                    <div class="btn btn-md p-1 open-notebook">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
-                                    </div>
-                                </div>
+{#                                <div class="col-1 d-xl-none p-0 text-center" title="Open Chatroom" onclick="redirectNotebook()">#}
+{#                                    <div class="btn btn-md p-1 open-notebook">#}
+{#                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>#}
+{#                                    </div>#}
+{#                                </div>#}
                                 <div class="col-2 d-xl-none text-end">
                                     <a href="#" class="icon icon-lg text-muted" data-bs-toggle="offcanvas" data-bs-target="#offcanvas-more" aria-controls="offcanvas-more">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical"><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"></circle><circle cx="12" cy="19" r="1"></circle></svg>
