--- a/users/templates/users/user_notebook.html
+++ b/users/templates/users/user_notebook.html
@@ -88,9 +88,9 @@
 
                             <a href="/chat" style="color: #000;" class="px-3"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
                             <div class="profile-picture">
-                                <img src="{{group.profile_image.url}}" alt="Group Profile Image">
+                                <img src="{{receiver.profile_image.url}}" alt="Group Profile Image">
                             </div>
-                            <p class="h5">{{group.group_name}}</p>
+                            <p class="h5">{{receiver.get_full_name}}</p>
                             <button class="btn btn-primary" style="margin-left: auto;background: #5596E6;font-weight: 600;" id="join_meeting">Start Meeting</button>
 
                             <script type="text/javascript">
