--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -71,6 +71,7 @@
                             </div>
                             <div class="icon-content">
                                 <h4 class="dlab-tilte m-b5">Email address</h4>
+                                <p>Want to get instant support ? Type away below.Schedule a short introductory call </p>
                                 <p>info@stellar-ai.in</p>
                             </div>
                         </div>
