--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -218,9 +218,9 @@ i.fa.fa-chevron-down{
                         <div class="about-content">
                             <span class="sub-title text-primary">Collaborative coding solutions<img
                                     src="{% static 'images/background/bg6.png' %}" alt="" /></span>
-                            <h2 class="title">AI CHAT-ROOMS</h2>
-                            <p>An environment which helps to connect people that are looking for AI/Coding solutions, people with no previous communication can connect through a Stellar AI Id which leads to a chatroom which includes important features like chats, voice chats , voice calls and video calls.</p>
-                            <p>AI/Coding personal tutors, E-learning Institutions , Companies, students can use such affordable AI Chat-rooms for personal growth.</p>
+                            <h2 class="title">AI CODE ROOMS</h2>
+                            <p>An environment which helps to connect people that are looking for AI/Coding solutions, people with no previous communication can connect through a Stellar AI Id which leads to a code room which includes important features like chats, voice calls and video calls.</p>
+                            <p>AI/Coding personal tutors, E-learning Institutions , Companies, students can use such affordable AI Code rooms for personal growth.</p>
                         </div>
                     </div>
                 </div>
@@ -309,7 +309,13 @@ i.fa.fa-chevron-down{
 <!--                                <span class="sub-title text-primary">Rich coding templates</span>-->
                                 <h2 class="title"><a href="#">Line of business</a>
                                 </h2>
-                                <p>A community based model where Artificial Intelligence enthusiasts can meet and connect with each other through AI Forums, AI Coderooms and grow together.</p>
+                                <p>A community based model where Artificial Intelligence/Coding/Machine-Learning enthusiasts can meet and connect with each other through different <br> Stellar AI features like -</p>
+                                <p>
+                                    1) AI Forums where users can post their doubts/questions/discussions and expect instant replies/answers from other users.<br>
+2) AI Code-rooms where users can add friends from the Stellar AI community and can connect live on code-room feature on the website , where they get live , chatting, video calling and a Common Coding Interface which is specially for AI/ML/DL purposes. This is paid but very affordable.<br>
+3) AI Skeleton Codes where there are ready made codes of different Artificial Intelligence Algorithms which the users can download and select as per the selected filters.<br>
+4) AI Competitions where AI/ML/DL Competitons from different sources will be posted and the  users can learn more and improve themselves by solving such datasets alone or in a team and grow together.<br>
+                                </p>
                             </div>
                         </div>
                     </div>
